Fixed styles to not cut off top text. Will also resize properly

--- a/src/www/css/virtualmachine.styl
+++ b/src/www/css/virtualmachine.styl
@@ -8,10 +8,15 @@
         .vm_page
             overflow auto
             display none
+            .vm_floater
+                float left
+                height 50%
+                margin-top -275px
             .vm_container
+                clear both;
                 width 1000px
-                margin 50px  auto auto
-                height 600px
+                margin 50px auto auto
+                height 550px
                 //border 1px solid #acacac
                 position relative
                 //border-radius: 5px
